# langchain-practise

./: Google_AI_Practise.py  RAG.py  README.md  pyproject.toml  test-ollama.py
1. BASIC GENAI & LLM CONCEPTS/: BasicConcepts.py
2. CORE LANGCHAIN ABSTRACTIONS/: ChatModels.py  PromptTemplates.py
3. LANGCHAIN EXPRESSION LANGUAGE (LCEL)/: BasicChains.py  ChainBranching.py  ParallelChains.py
4. TEXT PROCESSING & DOCUMENT MANAGEMENT/: DocumentProcessing.py
4. TEXT PROCESSING & DOCUMENT MANAGEMENT/data/: citi_policy.txt
4. TEXT PROCESSING & DOCUMENT MANAGEMENT/faiss_index/: index.faiss  index.pkl
5. RETRIEVAL-AUGMENTED GENERATION (RAG) FOUNDATIONS/: RAGPipeline.py
6. STRUCTURED OUTPUTS/: StructuredOutputs.py
