[project]
name = "langchain-practise"
version = "0.1.0"
description = ""
authors = [
    {name = "Emmanuel Learmount",email = "oldmanjenkins56@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "langchain (>=1.3.4,<2.0.0)",
    "langchain-ollama (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
