[project]
name = "langchain-practise"
version = "0.1.0"
description = ""
authors = [
    {name = "Emmanuel Learmount",email = "oldmanjenkins56@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "langchain (>=1.3.4,<2.0.0)",
    "langchain-ollama (>=1.1.0,<2.0.0)",
    "langchain-text-splitters (>=1.1.2,<2.0.0)",
    "langchain-core (>=1.4.3,<2.0.0)",
    "langchain-community (>=0.4.2,<0.5.0)",
    "faiss-cpu (>=1.14.2,<2.0.0)"
]